CloneManager/objects/Clone_Manager__mdt.object
<CustomObject>
    <fields>
        <fullName>Child_Columns_Fieldset__c</fullName>
        <description>Store the name of the fieldset that determines the columns to be shown on the Clone Manager component. Defaults to Name only</description>
        <label>Child Columns Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Object_FieldSet__c</fullName>
        <inlineHelpText>Optional : Field-set is used for the related object to only clone specific fields. If left blank it is going to run a deep clone for the related object.</inlineHelpText>
        <label>Child Object FieldSet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Object__c</fullName>
        <inlineHelpText>Enter child object API name.</inlineHelpText>
        <label>Child Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>A sequential number that determines how the features are sorted in the related list on the product.</description>
        <inlineHelpText>A sequential number that determines how the features are sorted in the related list on the product.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Lookup_Field__c</fullName>
        <inlineHelpText>Enter the parent lookup field API name from the child object.</inlineHelpText>
        <label>Parent Lookup Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <inlineHelpText>Enter parent object API name.</inlineHelpText>
        <label>Parent Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Clone Manager</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Parent_Object__c</columns>
        <columns>Child_Object__c</columns>
        <columns>Parent_Lookup_Field__c</columns>
        <columns>Child_Object_FieldSet__c</columns>
        <columns>Number__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Clone Managers</pluralLabel>
</CustomObject>